--- a/index.html
+++ b/index.html
@@ -25,61 +25,67 @@
       <div class="row">
         <label class="name" for="username">Fenrir Gryback</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell1" class="sel"></div>
+          <div id="cell2" class="sel"></div>
+          <div id="cell3" class="sel"></div>
+          <div id="cell4" class="sel"></div>
+          <div id="cell5" class="sel"></div>
+          <input type="radio" id="radio1" class="suspect" name="suspect">
         </div>
       </div>
       <div class="row">
         <label class="name" for="username">Lucius Malfoy</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell6"class="sel"></div>
+          <div id="cell7"class="sel"></div>
+          <div id="cell8"class="sel"></div>
+          <div id="cell9"class="sel"></div>
+          <div id="cell10"class="sel"></div>
+          <input type="radio" id="radio2" class="suspect" name="suspect">
         </div>
       </div>
       <div class="row">
         <label class="name" for="username">Peter Pettigrew</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell11" class="sel"></div>
+          <div id="cell12" class="sel"></div>
+          <div id="cell13" class="sel"></div>
+          <div id="cell14" class="sel"></div>
+          <div id="cell15" class="sel"></div>
+          <input type="radio" id="radio3" class="suspect" name="suspect">
         </div>
       </div>
       <div class="row">
         <label class="name" for="username">Draco Malfoy</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell16" class="sel"></div>
+          <div id="cell17" class="sel"></div>
+          <div id="cell18" class="sel"></div>
+          <div id="cell19" class="sel"></div>
+          <div id="cell20" class="sel"></div>
+          <input type="radio" id="radio4" class="suspect" name="suspect">
         </div>
       </div>
       <div class="row">
         <label class="name" for="username">Carroñero</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell21" class="sel"></div>
+          <div id="cell22" class="sel"></div>
+          <div id="cell23" class="sel"></div>
+          <div id="cell24" class="sel"></div>
+          <div id="cell25" class="sel"></div>
+          <input type="radio" id="radio5" class="suspect" name="suspect">
         </div>
       </div>
       <div class="row">
         <label class="name" for="username">Bellatrix Lestrange</label>
         <div class="sels">
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
-          <div class="sel"></div>
+          <div id="cell26" class="sel"></div>
+          <div id="cell27" class="sel"></div>
+          <div id="cell28" class="sel"></div>
+          <div id="cell29" class="sel"></div>
+          <div id="cell30" class="sel"></div>
+          <input type="radio" id="radio6" class="suspect" name="suspect">
         </div>
       </div>
     </div>
@@ -88,61 +94,68 @@
         <div class="row">
           <label class="name" for="username">Escoba embrujada</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell31" class="sel"></div>
+            <div id="cell32" class="sel"></div>
+            <div id="cell33" class="sel"></div>
+            <div id="cell34" class="sel"></div>
+            <div id="cell35" class="sel"></div>
+            <input type="radio" id="radio7" class="object" name="object">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Collar maldito</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell36" class="sel"></div>
+            <div id="cell37" class="sel"></div>
+            <div id="cell38" class="sel"></div>
+            <div id="cell39" class="sel"></div>
+            <div id="cell40" class="sel"></div>
+            <input type="radio" id="radio8" class="object" name="object">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Filtro de amor</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell41" class="sel"></div>
+            <div id="cell42" class="sel"></div>
+            <div id="cell43" class="sel"></div>
+            <div id="cell44" class="sel"></div>
+            <div id="cell45" class="sel"></div>
+            <input type="radio" id="radio9" class="object" name="object">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Hidromiel Envenenada</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell46" class="sel"></div>
+            <div id="cell47" class="sel"></div>
+            <div id="cell48" class="sel"></div>
+            <div id="cell49" class="sel"></div>
+            <div id="cell50" class="sel"></div>
+            <input type="radio" id="radio10" class="object" name="object">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Incendio</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell51" class="sel"></div>
+            <div id="cell52" class="sel"></div>
+            <div id="cell53" class="sel"></div>
+            <div id="cell54" class="sel"></div>
+            <div id="cell55" class="sel"></div>
+            <input type="radio" id="radio11" class="object" name="object">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Aturdidor</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell56" class="sel"></div>
+            <div id="cell57" class="sel"></div>
+            <div id="cell58" class="sel"></div>
+            <div id="cell59" class="sel"></div>
+            <div id="cell60" class="sel"></div>
+            <input type="radio" id="radio12" class="object" name="object">
+
           </div>
         </div>
       </div>
@@ -152,92 +165,109 @@
         <div class="row">
           <label class="name" for="username">Mansión Malfoy</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell61" class="sel"></div>
+            <div id="cell62" class="sel"></div>
+            <div id="cell63" class="sel"></div>
+            <div id="cell64" class="sel"></div>
+            <div id="cell65" class="sel"></div>
+            <input type="radio" id="radio13" class="location" name="location">
+
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">El Cabeza de Puerco</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell66" class="sel"></div>
+            <div id="cell67" class="sel"></div>
+            <div id="cell68" class="sel"></div>
+            <div id="cell69" class="sel"></div>
+            <div id="cell70" class="sel"></div>
+            <input type="radio" id="radio14" class="location" name="location">
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">La Casa de los Gritos</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell71"class="sel"></div>
+            <div id="cell72"class="sel"></div>
+            <div id="cell73"class="sel"></div>
+            <div id="cell74"class="sel"></div>
+            <div id="cell75"class="sel"></div>
+            <input type="radio" id="radio15" class="location" name="location">
+
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">Castillo de Hogwarts</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell76" class="sel"></div>
+            <div id="cell77" class="sel"></div>
+            <div id="cell78" class="sel"></div>
+            <div id="cell79" class="sel"></div>
+            <div id="cell80" class="sel"></div>
+            <input type="radio" id="radio16" class="location" name="location">
+
           </div>
         </div>
         <div class="row">
           <label class="name" for="username">El Bosque Prohibido</label>
           <div class="sels">
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
-            <div class="sel"></div>
+            <div id="cell81" class="sel"></div>
+            <div id="cell82" class="sel"></div>
+            <div id="cell83" class="sel"></div>
+            <div id="cell84" class="sel"></div>
+            <div id="cell85" class="sel"></div>
+            <input type="radio" id="radio17" class="location" name="location">
+
           </div>
         </div>
         <div class="row">
             <label class="name" for="username">Gringotts</label>
             <div class="sels">
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
+              <div id="cell86" class="sel"></div>
+              <div id="cell87" class="sel"></div>
+              <div id="cell88" class="sel"></div>
+              <div id="cell89" class="sel"></div>
+              <div id="cell90" class="sel"></div>
+            <input type="radio" id="radio18" class="location" name="location">
+
             </div>
           </div>
           <div class="row">
             <label class="name" for="username">Sortilegios Weasley</label>
             <div class="sels">
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
+              <div id="cell91" class="sel"></div>
+              <div id="cell92" class="sel"></div>
+              <div id="cell93" class="sel"></div>
+              <div id="cell94" class="sel"></div>
+              <div id="cell95" class="sel"></div>
+            <input type="radio" id="radio19" class="location" name="location">
+
             </div>
           </div>
           <div class="row">
             <label class="name" for="username">Ministerio de Magia</label>
             <div class="sels">
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
+              <div id="cell96" class="sel"></div>
+              <div id="cell97" class="sel"></div>
+              <div id="cell98" class="sel"></div>
+              <div id="cell99" class="sel"></div>
+              <div id="cell100" class="sel"></div>
+            <input type="radio" id="radio20" class="location" name="location">
+
             </div>
           </div>
           <div class="row">
             <label class="name" for="username">Grimmauld Place</label>
             <div class="sels">
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-              <div class="sel"></div>
-            </div>
+              <div id="cell101" class="sel"></div>
+              <div id="cell102" class="sel"></div>
+              <div id="cell103" class="sel"></div>
+              <div id="cell104" class="sel"></div>
+              <div id="cell105" class="sel"></div>
+              <input type="radio" id="radio21" class="location" name="location">
+
+            </div> 
           </div>
       </div>
     <script type="text/javascript" src="main.js"></script>
